--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,5 +1,4 @@
-project = "infra-xxxxxxx"
-public_key_path = "~/user/appuser.pub"
+project = "infra-221019"
+public_key_path = "~/.ssh/appuser.pub"
+private_key_path = "~/.ssh/appuser"
 disk_image = "reddit-base"
-private_key_path = "~/user/appuser"
-
