errors with tfvars.example

--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -1,4 +1,8 @@
 project = "infra-221019"
 public_key_path = "~/.ssh/appuser.pub"
 private_key_path = "~/.ssh/appuser"
-disk_image = "reddit-base"
+app_disk_image = "reddit-app-base"
+db_disk_image = "reddit-db-base"
+app_name = "reddit-app-stage"
+db_name = "reddit-db-stage"
+
