--- a/packer/app.json
+++ b/packer/app.json
@@ -8,7 +8,7 @@
         {
             "type": "googlecompute",
             "project_id": "{{user `project_id`}}",
-            "image_name": "reddit-app-base",
+            "image_name": "reddit-app-base-ansible",
             "image_family": "reddit-base",
             "source_image_family": "{{user `source_image_family`}}",
             "zone": "europe-west1-b",
@@ -25,9 +25,9 @@
     ],
     "provisioners": [
         {
-            "type": "shell",
-            "script": "scripts/install_ruby.sh",
-            "execute_command": "sudo {{.Path}}"
+            "type": "ansible",
+            "user": "appuser",
+            "playbook_file": "ansible/packer_app.yml"
         }
     ]
 }
