--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,13 @@
 [defaults]
-inventory = ./inventory
+inventory = ./environments/stage/inventory
 remote_user = appuser
+vault_password_file = vault.key
 private_key_file = /root/gcp_appuser
 host_key_checking = False
 retry_files_enabled = False
+roles_path = ./roles
+
+[diff]
+always = True
+context = 5
+
